# inew

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
fail_crate/: .gitignore  Cargo.toml  README.md
fail_crate/tests/: const_and_default.rs  const_and_default.stderr  const_and_into.rs  const_and_into.stderr  const_and_into_iter.rs  const_and_into_iter.stderr  const_and_optional.rs  const_and_optional.stderr  constant_instead_of_const.rs  constant_instead_of_const.stderr  default_and_into.rs  default_and_into.stderr  default_and_into_iter.rs  default_and_into_iter.stderr  default_and_optional.rs  default_and_optional.stderr  duplicate_const.rs  duplicate_const.stderr  duplicate_default.rs  duplicate_default.stderr  duplicate_different_const.rs  duplicate_different_const.stderr  duplicate_different_default.rs  duplicate_different_default.stderr  duplicate_different_no_prefix.rs  duplicate_different_no_prefix.stderr  duplicate_different_optional.rs  duplicate_different_optional.stderr  duplicate_different_pub.rs  duplicate_different_pub.stderr  (+92 more)
src/: constructor.rs  lib.rs  new_enum.rs  new_struct.rs
tests/: alias_enum.rs  alias_struct.rs  auto_default_enum.rs  auto_default_struct.rs  basic_enum.rs  basic_struct.rs  basic_test.rs  const_test.rs  default_enum.rs  default_struct.rs  derive_test.rs  enum_basic_test.rs  enum_const_test.rs  enum_pub_in_test.rs  fail_crate.rs  generics_enum.rs  generics_struct.rs  into_enum.rs  into_iter_enum.rs  into_iter_struct.rs  into_struct.rs  lifetimes_enum.rs  lifetimes_struct.rs  optional_enum.rs  optional_struct.rs  pub_in_enum.rs  pub_in_struct.rs  rename_enum.rs  rename_struct.rs  struct_basic_test.rs  struct_const_test.rs  struct_pub_in_test.rs  unit_like_enum.rs  unit_like_struct.rs  visibility_enum.rs  visibility_struct.rs
(+8 files in other folders)
