[package]
name = "inew"
version = "0.1.0"
edition = "2021"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "README.md"
keywords = ["builder", "macro", "derive", "constructor"]
categories = [ "rust-patterns"]
repository = "https://github.com/a14e/inew"
description = "Macroses for constructor generation"
license = "MIT OR Apache-2.0"


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"



