[package]
name = "inew"
version = "0.2.3"
edition = "2021"
rust-version = "1.80.0"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "README.md"
keywords = ["builder", "macro", "derive", "constructor"]
categories = ["rust-patterns"]
repository = "https://github.com/a14e/inew"
description = "Macros for constructor generation"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.108", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.103"

# no_std support https://github.com/nrc/derive-new
[features]
default = ["std"]
std = []
