[package]
name = "inew"
version = "0.4.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "README.md"
keywords = ["builder", "macro", "derive", "constructor"]
categories = ["rust-patterns"]
repository = "https://github.com/a14e/inew"
description = "Macros for constructor generation"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
heck = "0.5.0"

[dev-dependencies]
trybuild = "1.0.116"

[features]
default = ["std"]
std = []
public-default = []
